<resources>
    <string name="map_api_key">0J0Yxpuo9SaBnBxQvxP84vbfWsvPKtO_Bd08ReA</string>
    <string name="facebook_app_id">378915072194182</string>
    <string name="faq_url">http://help.messageme.com</string>
    <string name="service_status_url">https://twitter.com/msgme</string>
    <string name="terms_of_service_url">http://messageme.com/static/legal/terms-of-service.html</string>
    <string name="privacy_policy_url">http://messageme.com/static/legal/privacy-policy.html</string>
    <string name="sms_invite_body">Get on MessageMe http://messageme.com/b/ZW</string>
    <string name="email_invite_subject">A super fun messaging app</string>
    <string name="email_invite_body">Hi!\n\nI just got MessageMe, a new messaging app, and it\'s awesome!  If you don\'t have it yet, download it and check it out!\n\nHere\'s a link to download the app: http://msg.me/c/ZZ\n\nOnce you get it, you should see me in your contacts but if not send me the pin in your profile and I\'ll add you :)</string>
    <string name="app_name">MessageMe</string>
    <string name="app_title">Message Me</string>
    <string name="splash">Welcome to MessageMe</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_send_photo">Send Photo</string>
    <string name="menu_send_location">Send Location</string>
    <string name="menu_send_song">Send Song</string>
    <string name="menu_send_doodle">Send Doodle</string>
    <string name="menu_send_video">Send Video</string>
    <string name="menu_user_add">Add Contacts</string>
    <string name="menu_done">Done</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_edit">Edit</string>
    <string name="loading">Loading&#8230;</string>
    <string name="adding_contact">Adding contact&#8230;</string>
    <string name="removing_contact">Removing contact&#8230;</string>
    <string name="network_settings">Settings</string>
    <string name="network_error_title">Unable to Connect</string>
    <string name="network_error_start_up">Please make sure you\'re not in Airplane Mode and have access to WiFi or a cell network.</string>
    <string name="network_error">Please double check your wireless &amp; network settings and try again</string>
    <string name="invalid_email">Invalid email</string>
    <string name="network_timed_out">The connection timed out, please try again later</string>
    <string name="invalid_number">The phone number is not in an expected format.  Please correct it and try again (there is no need to include the country code).</string>
    <string name="unexpected_error_title">Unexpected Error</string>
    <string name="unexpected_error">An unexpected error occurred, please try again later</string>
    <string name="next_btn">Next</string>
    <string name="db_upgrade_message">Upgrading Database</string>
    <string name="db_upgrading_message">Updating&#8230;</string>
    <string name="db_downgrade_title">Downgrade Error</string>
    <string name="db_downgrade_message">You cannot install an older version of the application over the top of a newer one.\n\nIf you really want to install the older version, you must completely uninstall this version of MessageMe first.</string>
    <string name="app_upgrade_optional_title">Update Available</string>
    <string name="app_upgrade_optional_message">A new version of MessageMe is available.</string>
    <string name="app_upgrade_mandatory_title">Required Update</string>
    <string name="app_upgrade_mandatory_message">A required update is available for MessageMe. Please update to continue.</string>
    <string name="app_upgrade_btn_update">Update</string>
    <string name="app_upgrade_btn_later">Later</string>
    <string name="app_upgrade_error_title">Upgrade Failed</string>
    <string name="app_upgrade_error_message">Please try launching the app again.  If the problem persists please contact support@messageme.com</string>
    <string name="add_group_contact">Add group contact</string>
    <string name="group_name_input">Enter group name</string>
    <string name="group_creation_question_label">What is this group called?</string>
    <string name="group_add_names_label">Enter names of members</string>
    <string name="group_select_contacts_title">Select members</string>
    <string name="group_warning_title">Unable to Create Group</string>
    <string name="group_name_invalid">Group name can\'t be empty.</string>
    <string name="invite_friends_label">Invite Friends</string>
    <string name="create_new_group_label">New Group Chat</string>
    <string name="connection_error">Error refreshing contacts, no Internet connection</string>
    <string name="search_contacts_hint">Search Contacts</string>
    <string name="picker_invite_unavailable_title">http://msg.me</string>
    <string name="picker_invite_unavailable">Tell your friends to go to the link above on their mobile phone to get MessageMe and start texting with you for free today!</string>
    <string name="messages_tab_header">MESSAGES</string>
    <string name="contacts_tab_header">CONTACTS</string>
    <string name="myprofile_tab_header">MY PROFILE</string>
    <string name="refresh_contacts">Refresh</string>
    <string name="new_message_lbl">New Message</string>
    <string name="unread_messages_top_value">99+</string>
    <string name="send_btn">SEND</string>
    <string name="message_input">Enter message</string>
    <string name="voice_message_recording_label">Recording</string>
    <string name="voice_input_instruction_a">Press &amp; Hold Anywhere</string>
    <string name="voice_input_instruction_b">to Record and Send</string>
    <string name="voice_input_done_btn">Done</string>
    <string name="voice_message_playback_label">Play or pause this voice message</string>
    <string name="media_message_playback_label">Play or pause this media</string>
    <string name="chat_failure_title">Your message was not sent</string>
    <string name="chat_failure_try_again">Try Again</string>
    <string name="chat_failure_delete">Delete</string>
    <string name="chat_failure_cancel">Cancel</string>
    <string name="chat_seen_by">Seen by %s</string>
    <string name="chat_seen">Seen </string>
    <string name="chat_and">and</string>
    <string name="chat_at">at</string>
    <string name="chat_on">on</string>
    <string name="chat_yesterday">yesterday</string>
    <string name="chat_others">others</string>
    <string name="info_label">Info</string>
    <string name="sending_video_error_title">Error Sending Video</string>
    <string name="sending_image_error_title">Error Sending Image</string>
    <string name="sending_image_error_description">The image you chose is too large, or your device may be running low on memory. Please choose a smaller image or try again later.</string>
    <string name="sending_image_error_disk_space">Please check you have enough space available in your internal storage.</string>
    <string name="forward_text_message_meta">%1$s: \"%2$s\" on %3$s</string>
    <string name="no_google_maps_error">Your device does not appear to have Google Maps installed.  Please install Google Maps and try again.</string>
    <string name="no_google_maps_error_title">Google Maps Required</string>
    <string name="welcome">Welcome to MessageMe</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="password_label">Password</string>
    <string name="log_in_label">Log In</string>
    <string name="required_fields_alert_title">Required fields</string>
    <string name="required_fields_alert_body">Please fill all required fields</string>
    <string name="auth_progress_message">Authenticating</string>
    <string name="auth_error">Login Error</string>
    <string name="login_error">The email or password you entered is incorrect. Please double check and try again.</string>
    <string name="password_invalid_title">Invalid Password</string>
    <string name="password_invalid_body">Your new password must be at least 5 characters long.</string>
    <string name="phone_invalid_title">Invalid Phone Number</string>
    <string name="phone_invalid_message">Please double check and try again.</string>
    <string name="signup_email_auth_error_email_title">Invalid Email</string>
    <string name="signup_email_auth_error_email_message">The email address you entered is not valid. Please double check and try again.</string>
    <string name="auth_error_email_exists">The e-mail you entered is already registered with a MessageMe user. If you are the account owner, you may wish to login instead.</string>
    <string name="login_incorrect_email">Incorrect Email</string>
    <string name="login_incorrect_email_message">The email you entered does not belong to any account. Please double check and try again.</string>
    <string name="login_invalid_phone_title">Incorrect Phone Number or Password</string>
    <string name="login_invalid_phone_body">Please double check your phone number (include your country code) and your password and try again.</string>
    <string name="login_incorrect_phone">Incorrect Phone Number</string>
    <string name="login_incorrect_phone_message">The phone number you entered does not belong to any account. Please double check your phone number (include your country code) and try again.</string>
    <string name="bullet_separator">&#0183;</string>
    <string name="signup_pin_call_pending">Call in %s</string>
    <string name="contact_send_message">Send Message</string>
    <string name="notifications_label">Notifications</string>
    <string name="remove_contact_label">Remove Contact</string>
    <string name="contact_profile_add_contact_label">Add Contact</string>
    <string name="block_label">Block</string>
    <string name="unblock_label">Unblock</string>
    <string name="verify_number_legend">We just sent you an SMS with a verification code to your number at</string>
    <string name="verify_number_digit_numbers">Enter the 3 digit verification code below</string>
    <string name="verify_number_signs">&#35;&#35;&#35;</string>
    <string name="verify_number_resend_code">Resend Code</string>
    <string name="complete_profile_legend">Let your friends know who you are</string>
    <string name="email_lbl">Email</string>
    <string name="password_lbl">Password</string>
    <string name="first_name_hint">Required</string>
    <string name="last_name_hint">Required</string>
    <string name="email_hint">you@email.com</string>
    <string name="password_hint">Choose password</string>
    <string name="complete_profile_submit">Start Messaging</string>
    <string name="version_lbl">Version</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit My Profile</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="connect_with_friends">Connect with friends more easily! Your information is never displayed publicly.</string>
    <string name="add_new_phone">Add New Phone Number</string>
    <string name="diagnostics_section_title">Diagnostics</string>
    <string name="diagnostics_section_description">Please select the \'Save logs\' checkbox below, wait for the problem to occur again, then press the \'Send Logs\' button.</string>
    <string name="logging_label">Save logs</string>
    <string name="send_logs">Send Logs</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="get_help">Get Help</string>
    <string name="about">About MessageMe</string>
    <string name="logout">Log Out</string>
    <string name="setting_page_alert_play_sound">Play sound on alert</string>
    <string name="settings_page_alert_vibrate">Vibrate on alert</string>
</resources>