<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Contacts tab -->

    <item
        android:id="@+id/top_actionbar_search_contacts"
        android:icon="@drawable/actionbar_top_icon_search"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_search"
        android:visible="false"/>
    <item
        android:id="@+id/top_actionbar_add_contact"
        android:icon="@drawable/actionbar_top_icon_adduser"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_user_add"
        android:visible="false"/>

    <!-- Messages tab -->

    <item
        android:id="@+id/top_actionbar_search_message"
        android:icon="@drawable/actionbar_top_icon_search"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_search"
        android:visible="true"/>
    <item
        android:id="@+id/top_actionbar_compose"
        android:icon="@drawable/actionbar_top_icon_compose"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_compose"
        android:visible="true"/>

    <!-- My Profile tab -->

    <item
        android:id="@+id/top_actionbar_edit"
        android:icon="@drawable/actionbar_top_icon_edit"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_edit"
        android:visible="false"/>

    <!-- General -->
    <item
        android:id="@id/menu_refresh"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/menu_refresh"
        android:visible="false"/>

</menu>