<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/groupedtable_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	        
        <LinearLayout style="@style/gtableInstructionContainer" >
          
            <TextView
		        android:text="@string/complete_profile_legend"
		        style="@style/gtableInstructionText" />
        </LinearLayout>
   
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/groupedtable_cell_base_top"
		    android:orientation="vertical"
		    android:layout_marginTop="4dp" >
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <TextView
	                style="@style/groupTableInputCellLabel"
	                android:layout_width="@dimen/grouptable_inputcell_labelwidth"
	                android:layout_height="wrap_content"
	                android:text="@string/first_name_label" />
	
	            <EditText
	                android:id="@+id/first_name"
	                style="@style/groupTableInputCellText"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/first_name_hint"
	                android:imeOptions="actionNext"
	                android:inputType="textCapSentences"
	                android:singleLine="true" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginTop="4dp" >
	
	            <TextView
	                style="@style/groupTableInputCellLabel"
	                android:layout_width="@dimen/grouptable_inputcell_labelwidth"
	                android:layout_height="wrap_content"
	                android:text="@string/last_name_label" />
	
	            <EditText
	                android:id="@+id/last_name"
	                style="@style/groupTableInputCellText"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/last_name_hint"
	                android:imeOptions="actionNext"
	                android:inputType="textCapSentences"
	                android:singleLine="true" />
	        </LinearLayout>
	        
        </LinearLayout>
	        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/groupedtable_cell_base_bottom"
            android:orientation="vertical" >
        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <TextView
	                style="@style/groupTableInputCellLabel"
	                android:layout_width="@dimen/grouptable_inputcell_labelwidth"
	                android:layout_height="wrap_content"
	                android:text="@string/email_lbl" />
	
	            <EditText
	                android:id="@+id/email_address"
	                style="@style/groupTableInputCellText"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/email_hint"
	                android:imeOptions="actionNext"
	                android:inputType="textEmailAddress"
	                android:singleLine="true" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginTop="4dp" >
	
	            <TextView
	                style="@style/groupTableInputCellLabel"
	                android:layout_width="@dimen/grouptable_inputcell_labelwidth"
	                android:layout_height="wrap_content"
	                android:text="@string/password_lbl" />
	
	            <EditText
	                android:id="@+id/password"
	                style="@style/groupTableInputCellText"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/password_hint"
	                android:imeOptions="actionDone"
	                android:inputType="textPassword"
	                android:singleLine="true" />
	        </LinearLayout>
	        
	    </LinearLayout>
	    
	    <Button
            android:id="@+id/submit_btn"
            style="@style/primaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:text="@string/complete_profile_submit" />
        
    </LinearLayout>

</ScrollView>