<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/groupedtable_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout style="@style/gtableInstructionContainer" >

            <TextView
                android:id="@+id/verify_number_legend"
                style="@style/gtableInstructionText"
                android:layout_marginBottom="8dip"
                android:text="@string/verify_number_legend" />

            <TextView
                style="@style/gtableInstructionText"
                android:layout_marginTop="8dip"
                android:text="@string/verify_number_digit_numbers" />
        </LinearLayout>

        <EditText
            android:id="@+id/confirmation_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/groupedtable_cell_base_single"
            android:hint="@string/verify_number_signs"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="3"
            android:singleLine="true"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/resend_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/separator"
                android:clickable="true"
                android:text="@string/verify_number_resend_code"
                android:textColor="@color/asphalt_gray"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:text="@string/bullet_separator"
                android:textColor="@color/asphalt_gray"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resend_voice_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/separator"
                android:text="@string/signup_pin_call_pending"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>